<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="rick_and_morty">Rick And Morty</string>
    <string name="error">Error</string>
    <string name="status">Status:</string>
    <string name="specy">Specy:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="episoides">Episoides:</string>
    <string name="created_at_in_api">Created at (in Api)</string>
    <string name="welcome">Welcome!</string>
    <string name="retry">Retry</string>
</resources>